[gd_scene load_steps=11 format=3 uid="uid://beacmbeyduipt"]

[ext_resource type="Texture2D" uid="uid://b3rjocfurxm7x" path="res://assets/tiles/Dungeon_Tileset.png" id="1_7q8kv"]
[ext_resource type="Script" path="res://scenes/locked_door/locked_door.gd" id="1_maawx"]
[ext_resource type="PackedScene" uid="uid://c6558piuwf6fw" path="res://scenes/interaction_area/interaction_area.tscn" id="2_gfy64"]
[ext_resource type="PackedScene" uid="uid://bc04p6e3xp50b" path="res://scenes/word_game/word_game.tscn" id="4_4irbt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y47rp"]
size = Vector2(8, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qos5f"]
size = Vector2(48, 35)

[sub_resource type="Animation" id="Animation_fj5k7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_8bm2g"]
resource_name = "lock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lock:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xnbrx"]
resource_name = "unlock"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, -10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Lock:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51go7"]
_data = {
"RESET": SubResource("Animation_fj5k7"),
"lock": SubResource("Animation_8bm2g"),
"unlock": SubResource("Animation_xnbrx")
}

[node name="LockedDoor" type="Node2D"]
z_index = 5
script = ExtResource("1_maawx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 0)
texture = ExtResource("1_7q8kv")
hframes = 3
region_enabled = true
region_rect = Rect2(0, 576, 192, 64)

[node name="Lock" type="Sprite2D" parent="."]
position = Vector2(2, 5)
texture = ExtResource("1_7q8kv")
region_enabled = true
region_rect = Rect2(200, 520, 16, 16)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Coll" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, 5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_y47rp")
disabled = true

[node name="InteractionArea" parent="." instance=ExtResource("2_gfy64")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(2, 5.5)
shape = SubResource("RectangleShape2D_qos5f")

[node name="WordGame" parent="." instance=ExtResource("4_4irbt")]
visible = false
offset_left = 1.0
offset_top = -35.0
offset_right = 1.0
offset_bottom = -35.0

[node name="DoorAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_51go7")
}
autoplay = "lock"
